Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129331

text input v3 preedit_string's cursor position isn't honored

XMLWordPrintable

    • Linux/Wayland
    • 63f9c5e45 (dev), 91b5b7099 (6.9), 530442132 (6.8)

      The preedit_string event has the arguments to position the cursor, and I've configured my fcitx5 input method to put it at the beginning, so that the input method window doesn't move a lot during typing (i.e. when the preedit string length changes). But Qt still places the cursor at the end of the preedit string. This combining with QTBUG-121477 makes the input method window chases the cursor constantly.

      I've tested Wireshark, Telegram and fcitx5-config-qt on Wayfire, and QT_WAYLAND_TEXT_INPUT_PROTOCOL=zwp_text_input_v3 dolphin on KDE. All reproduces this issue.

        1. qt.log
          25 kB
        2. qt-tiv3-cursor.mp4
          430 kB
        For Gerrit Dashboard: QTBUG-129331
        # Subject Branch Project Status CR V

            qt.team.graphics.and.multimedia Qt Graphics Team
            lilydjwg lilydjwg li
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: