textinputv3: use the cursorBegin as a cursor position of preedit

When using preedit, CJ inputs use the cursor rectangle for showing
a candidate list.  The cursorBegin of preedit has been used for
the position in most compositors and desktop input-methods.

Done-by: lilydjwg li
Fixes: QTBUG-129331
Pick-to: 6.9 6.8 6.5
Change-Id: Id8a1fa864189ced98672c3b20c169dd6a950d18d
Reviewed-by: David Edmundson <davidedmundson@kde.org>